Fix issue with imaging flickering

--- a/style.css
+++ b/style.css
@@ -40,5 +40,5 @@ body {
   background-image: url('bigimage.jpg');
   background-repeat: no-repeat;
   background-position: 50%;
-  background-size: contain;;
+  background-size: contain;
 }
